# mypyc

./: .gitmodules  .travis.yml
lib-rt/: CMakeLists.txt
mypyc/test/: test_external.py
scripts/: build-debug-python.sh
